--- a/payment.css
+++ b/payment.css
@@ -13,8 +13,36 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 40px;
+    flex-wrap: nowrap;
 }
+
+@media (max-width: 768px) {
+
+.header-inner {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+}
+.search-bar input {
+        width: 90% !important;
+        max-width: 350px;
+}
+
+.top-icons {
+        display: flex;
+        gap: 12px;
+        justify-content: center;
+        width: 100%;
+}
+
+.col-sm-6, .col-sm {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+}
+}
+
 
 .redirectlinks{
     /* margin-top: 10px; */
