--- a/payment.css
+++ b/payment.css
@@ -4,7 +4,12 @@
     color: white;
 }
 
-.header,
+.header{
+        background: rgba(255, 255, 255, 0.201);
+    backdrop-filter: blur(10px);             /* blur behind */
+    -webkit-backdrop-filter: blur(10px);     /* safari */
+    border-bottom: 2px solid #f56e6e;
+}
 .nav-menu {
     background: #8B0000;
 }
